--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Build Unity Android
+name: Unity Multi Build (Android + Windows + WebGL)
 
 on:
   push:
@@ -9,11 +9,11 @@ on:
 
 jobs:
   build:
-    name: Build Unity Android Project
+    name: Build LudoDream
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Récupération du code
+      # 1. Checkout du projet
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -23,83 +23,86 @@ jobs:
         with:
           path: ~/.cache/unity3d
           key: Unity-${{ runner.os }}
-      
-      # 3. Installer Unity (2022.3.20f1)
+
+      # 3. Installer Unity + modules
       - name: Install Unity
         uses: game-ci/unity-installer@v3
         with:
           unityVersion: 2022.3.20f1
-          modules: android
+          modules: android,windows,webgl
 
-      # 4. Build Android (APK + AAB)
+      # ------------------------
+      # 🔶 BUILD ANDROID
+      # ------------------------
       - name: Build Android
         uses: game-ci/unity-builder@v4
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
           targetPlatform: Android
-          buildName: LudoDream
+          buildName: LudoDreamAndroid
           androidExportType: androidPackage
           allowDirtyBuild: true
 
-      # 5. Upload artefacts (APK & AAB)
-      - name: Upload Build
+      - name: Upload Android Build
         uses: actions/upload-artifact@v3
         with:
           name: Android-Build
           path: build/Android/
 
+      # ------------------------
+      # 🔷 BUILD WINDOWS
+      # ------------------------
+      - name: Build Windows
+        uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        with:
+          targetPlatform: StandaloneWindows64
+          buildName: LudoDreamWindows
+          allowDirtyBuild: true
+
+      - name: Upload Windows Build
+        uses: actions/upload-artifact@v3
+        with:
+          name: Windows-Build
+          path: build/StandaloneWindows64/
+
+      # ------------------------
+      # 🟩 BUILD WEBGL
+      # ------------------------
+      - name: Build WebGL
+        uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        with:
+          targetPlatform: WebGL
+          buildName: LudoDreamWebGL
+          allowDirtyBuild: true
+
+      - name: Upload WebGL Build
+        uses: actions/upload-artifact@v3
+        with:
+          name: WebGL-Build
+          path: build/WebGL/
+
+  # ------------------------
+  # 📦 RELEASE FINAL
+  # ------------------------
   release:
     name: Publish Release
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Download build artifacts
+      - name: Download Builds
         uses: actions/download-artifact@v3
         with:
-          name: Android-Build
-          path: ./ReleaseFiles
+          path: ./AllBuilds
 
-      - name: Create Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./ReleaseFiles/**
+          files: ./AllBuilds/**
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project
