--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,31 +9,32 @@ on:
 
 jobs:
   build:
-    name: Build LudoDream
     runs-on: ubuntu-latest
+    name: Build LudoDream
 
     steps:
-      # 1. Checkout du projet
+      # --- Checkout project ---
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2. Cache Unity
-      - name: Unity Cache
-        uses: actions/cache@v3
+      # --- Cache Unity ---
+      - name: Cache Unity
+        uses: actions/cache@v4
         with:
           path: ~/.cache/unity3d
-          key: Unity-${{ runner.os }}
+          key: cache-unity-${{ runner.os }}
 
-      # 3. Installer Unity + modules
+      # --- Install Unity (NEW URL GameCI 2025) ---
       - name: Install Unity
-        uses: game-ci/unity-installer@v3
+        uses: game-ci/unity-setup@v3
         with:
           unityVersion: 2022.3.20f1
-          modules: android,windows,webgl
+          modules: |
+            android
+            windows
+            webgl
 
-      # ------------------------
-      # 🔶 BUILD ANDROID
-      # ------------------------
+      # --- Build Android ---
       - name: Build Android
         uses: game-ci/unity-builder@v4
         env:
@@ -41,18 +42,14 @@ jobs:
         with:
           targetPlatform: Android
           buildName: LudoDreamAndroid
-          androidExportType: androidPackage
-          allowDirtyBuild: true
 
-      - name: Upload Android Build
-        uses: actions/upload-artifact@v3
+      - name: Upload Android Artifact
+        uses: actions/upload-artifact@v4
         with:
           name: Android-Build
           path: build/Android/
 
-      # ------------------------
-      # 🔷 BUILD WINDOWS
-      # ------------------------
+      # --- Build Windows ---
       - name: Build Windows
         uses: game-ci/unity-builder@v4
         env:
@@ -60,17 +57,14 @@ jobs:
         with:
           targetPlatform: StandaloneWindows64
           buildName: LudoDreamWindows
-          allowDirtyBuild: true
 
-      - name: Upload Windows Build
-        uses: actions/upload-artifact@v3
+      - name: Upload Windows Artifact
+        uses: actions/upload-artifact@v4
         with:
           name: Windows-Build
           path: build/StandaloneWindows64/
 
-      # ------------------------
-      # 🟩 BUILD WEBGL
-      # ------------------------
+      # --- Build WebGL ---
       - name: Build WebGL
         uses: game-ci/unity-builder@v4
         env:
@@ -78,30 +72,26 @@ jobs:
         with:
           targetPlatform: WebGL
           buildName: LudoDreamWebGL
-          allowDirtyBuild: true
 
-      - name: Upload WebGL Build
-        uses: actions/upload-artifact@v3
+      - name: Upload WebGL Artifact
+        uses: actions/upload-artifact@v4
         with:
           name: WebGL-Build
           path: build/WebGL/
 
-  # ------------------------
-  # 📦 RELEASE FINAL
-  # ------------------------
+  # --- Release job ---
   release:
-    name: Publish Release
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
-      - name: Download Builds
-        uses: actions/download-artifact@v3
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
         with:
           path: ./AllBuilds
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
         with:
           files: ./AllBuilds/**
         env:
